--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chacha20 = { version = "0.9.0", features = ["zeroize"] }
 clap = { version = "3.1.18", features = ["derive"] }
 ctrlc = "3.2.2"
+getrandom = "0.2.6"
 libc = "0.2.126"
 nix = "0.24.1"
-rand = "0.8.5"
-rand_chacha = "0.3.1"
