--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 
 [dependencies]
 chacha20 = { version = "0.9.0", features = ["zeroize"] }
-clap = { version = "3.1.18", features = ["derive"] }
+clap = { version = "3.1.18", features = ["cargo"] }
 ctrlc = "3.2.2"
 getrandom = "0.2.6"
 libc = "0.2.126"
-nix = "0.24.1"
+nix = { version = "0.24.1", features = ["umask"] }
