--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,15 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dev-dependencies]
+nix = { version = "0.24.1" }
+tempfile = { version = "3.3.0" }
+
 [dependencies]
 chacha20 = { version = "0.9.0", features = ["zeroize"] }
 clap = { version = "3.1.18", features = ["cargo"] }
 ctrlc = "3.2.2"
 getrandom = "0.2.6"
 libc = "0.2.126"
-nix = { version = "0.24.1" }
-tempfile = { version = "3.3.0", optional = true }
-
-[features]
-default = ["tempfile"]
-tempfile = ["dep:tempfile"]
